<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/hello"
        android:textSize="25sp"
        android:textStyle="italic"
        android:typeface="serif" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="vertical" >
        
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/users_order"
        android:textSize="20sp"
        android:textStyle="italic"
        android:typeface="serif" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/keypad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:stretchColumns="*" >

        <TableRow >

            <Button
                android:id="@+id/card4"
                android:text="@string/get_directions" >
            </Button>

            <Button
                android:id="@+id/card2"
                android:text="@string/call_customer" >
            </Button>
        </TableRow>

        <TableRow >

            <Button
                android:id="@+id/captureimage"
                android:text="@string/scan_id" >
            </Button>

            <Button
                android:id="@+id/card5"
                android:text="@string/cancel_order" >
            </Button>
        </TableRow>
    </TableLayout>

    <ImageView
        android:id="@+id/imagecaptured"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
<!--  

<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
 android:background="@drawable/bmw" >
<LinearLayout 
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:textSize="50px"
    android:text="@string/name"
	android:gravity="center_horizontal"
	android:paddingTop="20dip"	
	android:paddingBottom="50dip" 
	android:textColor="#0000FF"/>
    
<TableLayout 
   android:id="@+id/keypad"
   android:orientation="vertical"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:stretchColumns="*">
   
   <TableRow>
      <Button android:id="@+id/card1"
         android:text=" ">
      </Button>
      <Button android:id="@+id/card2"
         android:text=" ">
      </Button>
      <Button android:id="@+id/card3"
         android:text=" ">
      </Button>
   </TableRow>
   
   <TableRow>
      <Button android:id="@+id/card4"
         android:text=" ">
      </Button>
      <Button android:id="@+id/card5"
         android:text=" ">
      </Button>
      <Button android:id="@+id/card6"
         android:text=" ">
      </Button>
   </TableRow>
   </TableLayout>

  <TextView
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/name"
	android:gravity="center_horizontal"/>
  
    
</LinearLayout>
</ScrollView>






<RelativeLayout
    android:id="@+id/relativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
</RelativeLayout>

<LinearLayout
    android:id="@+id/linearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon" />

</LinearLayout> -->


